// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextHighlighter children should have background color applied and removed after 5 sec 1`] = `
<div>
  <div
    class="LayerContext__Wrapper-sc-1aos3gl-1 cBBXXb"
  >
    <div
      class="ConfirmModalProvider__Wrapper-sc-61ybn0-0 jhIRov"
    >
      <div />
      <div
        data-testid="component-wrapper"
      >
        <span
          class="highlight-text__inview"
        >
          Text Highlight
        </span>
      </div>
    </div>
    <div
      class="BaseBox-bksIuc hlCpEz"
      data-blade-component="toast-container"
      pointer-events="none"
    >
      <div
        class="BaseBox-bksIuc hUnYPb"
        data-blade-component="base-box"
        data-testid="toast-mouseover-container"
        pointer-events="all"
      />
    </div>
  </div>
  <div
    class="LayerContext__LayerHost-sc-1aos3gl-0 cqBzuf"
    data-testid="layerTestId"
    id="layerHost"
  />
</div>
`;

exports[`TextHighlighter children should have background color applied and removed after 5 sec 2`] = `
<div>
  <div
    class="LayerContext__Wrapper-sc-1aos3gl-1 cBBXXb"
  >
    <div
      class="ConfirmModalProvider__Wrapper-sc-61ybn0-0 jhIRov"
    >
      <div />
      <div
        data-testid="component-wrapper"
      >
        <span
          class="highlight-text__remove"
        >
          Text Highlight
        </span>
      </div>
    </div>
    <div
      class="BaseBox-bksIuc hlCpEz"
      data-blade-component="toast-container"
      pointer-events="none"
    >
      <div
        class="BaseBox-bksIuc hUnYPb"
        data-blade-component="base-box"
        data-testid="toast-mouseover-container"
        pointer-events="all"
      />
    </div>
  </div>
  <div
    class="LayerContext__LayerHost-sc-1aos3gl-0 cqBzuf"
    data-testid="layerTestId"
    id="layerHost"
  />
</div>
`;

exports[`TextHighlighter children should not have background color applied 1`] = `
<div>
  <div
    class="LayerContext__Wrapper-sc-1aos3gl-1 cBBXXb"
  >
    <div
      class="ConfirmModalProvider__Wrapper-sc-61ybn0-0 jhIRov"
    >
      <div />
      <div
        data-testid="component-wrapper"
      >
        <span
          class="highlight-text__remove"
        >
          Text Highlight
        </span>
      </div>
    </div>
    <div
      class="BaseBox-bksIuc hlCpEz"
      data-blade-component="toast-container"
      pointer-events="none"
    >
      <div
        class="BaseBox-bksIuc hUnYPb"
        data-blade-component="base-box"
        data-testid="toast-mouseover-container"
        pointer-events="all"
      />
    </div>
  </div>
  <div
    class="LayerContext__LayerHost-sc-1aos3gl-0 cqBzuf"
    data-testid="layerTestId"
    id="layerHost"
  />
</div>
`;
